--- a/layanan.html
+++ b/layanan.html
@@ -35,7 +35,8 @@
           <div class="d-flex">
             <div class="ts-service-info">
               <h3 class="service-box-title"><a href="#">Penerjemahan</a></h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat eius saepe quo quod porro, reiciendis incidunt deserunt iusto labore aliquid?</p>
+              <p>Layanan fasilitasi dan koordinasi dalam Bidang Penerjemahan dan Penjurubahasaan 
+                untuk penguatan literasi dan penginternasionalan bahasa Indonesia.</p>
               <a class="learn-more d-inline-block" href="https://penerjemahan.kemdikbud.go.id/" aria-label="service-details" target="_blank"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
             </div>
           </div>
