update link layanan

--- a/layanan.html
+++ b/layanan.html
@@ -15,7 +15,7 @@
           </div>
           <div class="d-flex">
             <div class="ts-service-info">
-              <h3 class="service-box-title"><a href="#">Bahasa Indonesia bagi Penutur Asing</a></h3>
+              <h3 class="service-box-title"><a href="https://bipa.kemdikbud.go.id/portal">Bahasa Indonesia bagi Penutur Asing</a></h3>
               <p>Layanan fasilitasi dan koordinasi dalam bidang Bahasa Indonesia bagi Penutur Asing (BIPA) untuk meningkatkan fungsi bahasa Indonesia menjadi bahasa internasional.</p>
               <a class="learn-more d-inline-block" href="https://bipa.kemdikbud.go.id/portal" aria-label="service-details" target="_blank"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
             </div>
@@ -34,7 +34,7 @@
           </div>
           <div class="d-flex">
             <div class="ts-service-info">
-              <h3 class="service-box-title"><a href="#">Penerjemahan</a></h3>
+              <h3 class="service-box-title"><a href="https://penerjemahan.kemdikbud.go.id">Penerjemahan</a></h3>
               <p>Layanan fasilitasi dan koordinasi dalam Bidang Penerjemahan dan Penjurubahasaan 
                 untuk penguatan literasi dan penginternasionalan bahasa Indonesia.</p>
               <a class="learn-more d-inline-block" href="https://penerjemahan.kemdikbud.go.id/" aria-label="service-details" target="_blank"><i class="fa fa-caret-right"></i> Lebih Lanjut</a>
